# FreeCAD-robotic-addon

./: .gitignore  .gitmodules  Benchmark_dynamics.py  Benchmark_dynamics_result.csv  Benchmark_inverse_kinematic.py  Benchmark_inverse_kinematic_results.csv  Init.py  InitGui.py  README.md  RobotObject.py  TODO  TrejectoryObject.py  Validation.py  analytical_example.ipynb  angle_sliders.py  classes.py  defineJoints.py  draw_danevit_hartenberg.py  dynamics.py  forward_kinematics.py  inverse_kinematics.py  main_utils.py  metadata.txt  package.xml  positioning_functions.py  pyproject.toml  qt_angle_sliders.py  qt_move_end_effector.py  qt_orientation_sliders.py  requirements.txt  secondary_utils.py  select_constaints.py  temp.py  test.ipynb  test.py  test_command.py
Benchmark/: Benchmark_dynamics.py  Benchmark_inverse_kinematic.py  Benchmark_inverse_kinematic_results.csv
Example/: 6_dof_robot_arm.20250209-155329.FCBak  6_dof_robot_arm.20250210-110759.FCBak  6_dof_robot_arm.20250215-170926.FCBak  6_dof_robot_arm.20250301-220101.FCBak  6_dof_robot_arm.20250401-213150.FCBak  6_dof_robot_arm.20250401-213215.FCBak  6_dof_robot_arm.FCStd  6_dof_robot_arm.FCStd.62dcccae-07d6-41d9-96b1-415d631cfeaf  6_dof_robot_arm2.20250131-105606.FCBak  6_dof_robot_arm2.FCStd  6_dof_robot_arm3.20250131-183500.FCBak  6_dof_robot_arm3.20250201-105707.FCBak  6_dof_robot_arm3.FCStd  6_dof_robot_arm_parts.FCStd  6_dof_robot_arm_with_car.20250328-082151.FCBak  6_dof_robot_arm_with_car.20250331-142035.FCBak  6_dof_robot_arm_with_car.FCStd  Example_laser_cutting.FCStd  Example_milling.FCStd  Example_navigating_obstacles.FCStd  Simple_robot_arm.20250126-170553.FCBak  Simple_robot_arm.20250130-113814.FCBak  Simple_robot_arm.20250203-172111.FCBak  Simple_robot_arm.FCStd  Simple_robot_arm_parts.FCStd  Simple_robot_arm_parts2.FCStd  Simple_shapes.FCStd  coriolis_test.FCStd  cylinders.FCStd  dummy - Copy.20250227-172116.FCBak  dummy - Copy.FCStd  dummy.20250226-205038.FCBak  dummy.FCStd  robot_1_0.20250122-215328.FCBak  robot_1_0.FCStd  robot_1_0_asm.20250122-215542.FCBak  robot_1_0_asm.20250122-225459.FCBak  robot_1_0_asm.FCStd  simple_robot_1_2.20250120-082303.FCBak  simple_robot_1_2.FCStd  (+3 more)
GUI_elements/: qt_angle_sliders.py  qt_move_end_effector.py  qt_orientation_sliders.py
Illustrations/: spline_smoothing_parameter.py
Thesis/: bibliography.bib  main.tex
Thesis/Content/: 01Introduction.tex  02Methodology.tex  03NormalOperation.tex  04Tweaking.tex  05Data.tex  06Surrogates.tex  07Analysis.tex  08Discussion.tex  09Conclusion.tex
Thesis/Frontmatter/: Abbreviation.tex  Abstract.tex  Formality.tex  Preface.tex  Titlepage.tex
Thesis/Settings/: layout.tex  preamble.tex
Trajectory/: TimeOptimizedTrajectory.py  Trajectory_commands.py  Trajectory_constant_velocity.py  Trajectory_parent.py  Trajectory_time_optimized.py  TrejectoryObject.py
Utils/: main_utils.py
data/: Benchmark_dynamics_result.csv  Benchmark_inverse_kinematic_results.csv  original_points.csv  spline_data.csv
robot_dynamics_module/: CMakeLists.txt  computeJointTorques.cpp  inverseKinematicSolver.cpp
