[build-system]
requires = [
    "scikit-build-core>=0.5",
    "pybind11",
    "numpy==1.26.4",       # unified NumPy version
    "setuptools",
    "wheel"
]
build-backend = "scikit_build_core.build"

[project]
name = "freecad_robotics"
version = "1.0.0"
description = "FreeCAD Robotics Workbench with C++ bindings via pybind11"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy==1.26.4",
    "toppra==0.5.3"
    ##"toppra @ file:robot_dynamics_module/external/toppra"
]

[tool.scikit-build]
cmake.source-dir = "robot_dynamics_module"
wheel.packages = ["freecad_robotics"]