[build-system]
requires = [
  "scikit-build-core>=0.5",
  "pybind11",
  "numpy",
  "setuptools",
  "wheel",
]
build-backend = "scikit_build_core.build"

[project]
name = "freecad_robotics"
version = "1.0.0"
description = "FreeCAD Robotics Workbench with C++ bindings via pybind11"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Name", email = "you@example.com" }
]

dependencies = [
  "numpy",
  "colorama",
  "matplotlib",
  "sympy",
  "ipykernel",
  "toppra @ file:robot_dynamics_module/external/toppra",
]

[tool.setuptools.packages.find]
where = ["robot_dynamics_module/external"]

[tool.scikit-build]
cmake.source-dir = "robot_dynamics_module"
wheel.packages = [
  "freecad_robotics",
  "toppra",
]
